updated code owners
Signed-off-by: Harish P <harish_p4@dell.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,6 +12,7 @@
 # Don Khan (donatwork)
 # Sean Gallacher (gallacher)
 # Alexander Hoppe (hoppea2)
+# Harish Prabhakara (harishp8889)
 # Matt Schmaelzle (mjsdell)
 # Prasanna Muthukumaraswamy (prablr79)
 # Sharmila Ramamoorthy (sharmilarama)
@@ -19,4 +20,4 @@
 
 
 # for all files:
-* @AronAtDell @ChristianAtDell @donatwork @gallacher @hoppea2 @mjsdell @prablr79 @sharmilarama @shaynafinocchiaro
+* @AronAtDell @ChristianAtDell @donatwork @gallacher @hoppea2 @harishp8889 @mjsdell @prablr79 @sharmilarama @shaynafinocchiaro
