--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -48,7 +48,7 @@ jobs:
           git push origin ${{ github.event.inputs.version }}
 
       - name: Create GitHub release
-        uses: actions/create-release@v1
+        uses: comnoco/create-release-action@main
         with:
           tag_name: ${{ github.event.inputs.version }}
           release_name: Release ${{ github.event.inputs.version }}
