sort in alphabetical order

--- a/.github/workflows/trigger-go-workflow.yaml
+++ b/.github/workflows/trigger-go-workflow.yaml
@@ -31,40 +31,37 @@ jobs:
       matrix:
         repo:
           [
+            "$WF_ORG/cert-csi",
             "$WF_ORG/common-github-actions",
-            "$WF_ORG/csi-metadata-retriever",
+            "$WF_ORG/cosi","$WF_ORG/csi-metadata-retriever",
+            "$WF_ORG/csi-powerflex","$WF_ORG/csi-powermax",
+            "$WF_ORG/csi-powerscale",
+            "$WF_ORG/csi-powerstore",
+            "$WF_ORG/csi-unity",
             "$WF_ORG/csi-volumegroup-snapshotter",
-            "$WF_ORG/goscaleio",
-            "$WF_ORG/gopowermax",
-            "$WF_ORG/gounity",
-            "$WF_ORG/gopowerscale",
-            "$WF_ORG/gopowerstore",
+            "$WF_ORG/csm","$WF_ORG/csm-authorization",
+            "$WF_ORG/csm-docs",
+            "$WF_ORG/csm-metrics-powermax",
+            "$WF_ORG/csm-metrics-powerscale",
+            "$WF_ORG/csm-metrics-powerstore",
+            "$WF_ORG/csm-metrics-unity",
+            "$WF_ORG/csm-observability",
+            "$WF_ORG/csm-operator",
+            "$WF_ORG/csm-replication",
+            "$WF_ORG/dell-csi-extensions",
             "$WF_ORG/gobrick",
             "$WF_ORG/gocsi",
+            "$WF_ORG/gofsutil",
             "$WF_ORG/goiscsi",
             "$WF_ORG/gonvme",
             "$WF_ORG/goobjectscale",
-            "$WF_ORG/gofsutil",
-            "$WF_ORG/dell-csi-extensions",
-            "$WF_ORG/csi-powerflex",
-            "$WF_ORG/csi-unity",
-            "$WF_ORG/csi-powerscale",
-            "$WF_ORG/csi-powerstore",
-            "$WF_ORG/csi-powermax",
-            "$WF_ORG/cosi",
-            "$WF_ORG/csm-authorization",
-            "$WF_ORG/csm-observability",
-            "$WF_ORG/csm-metrics-powerscale",
-            "$WF_ORG/csm-metrics-powermax",
-            "$WF_ORG/csm-metrics-powerstore",
+            "$WF_ORG/gopowermax",
+            "$WF_ORG/gopowerscale",
+            "$WF_ORG/gopowerstore",
+            "$WF_ORG/goscaleio",
+            "$WF_ORG/gounity",
             "$WF_ORG/karavi-metrics-powerflex",
-            "$WF_ORG/csm-metrics-unity",
-            "$WF_ORG/csm-replication",
             "$WF_ORG/karavi-resiliency",
-            "$WF_ORG/csm-operator",
-            "$WF_ORG/cert-csi",
-            "$WF_ORG/csm",
-            "$WF_ORG/csm-docs",
             "$INTERNAL_REPOS",
           ]
 
