--- a/.github/workflows/trigger-go-workflow.yaml
+++ b/.github/workflows/trigger-go-workflow.yaml
@@ -33,13 +33,16 @@ jobs:
           [
             "$WF_ORG/cert-csi",
             "$WF_ORG/common-github-actions",
-            "$WF_ORG/cosi","$WF_ORG/csi-metadata-retriever",
-            "$WF_ORG/csi-powerflex","$WF_ORG/csi-powermax",
+            "$WF_ORG/cosi",
+            "$WF_ORG/csi-metadata-retriever",
+            "$WF_ORG/csi-powerflex",
+            "$WF_ORG/csi-powermax",
             "$WF_ORG/csi-powerscale",
             "$WF_ORG/csi-powerstore",
             "$WF_ORG/csi-unity",
             "$WF_ORG/csi-volumegroup-snapshotter",
-            "$WF_ORG/csm","$WF_ORG/csm-authorization",
+            "$WF_ORG/csm",
+            "$WF_ORG/csm-authorization",
             "$WF_ORG/csm-docs",
             "$WF_ORG/csm-metrics-powermax",
             "$WF_ORG/csm-metrics-powerscale",
