--- a/.github/workflows/trigger-go-workflow.yaml
+++ b/.github/workflows/trigger-go-workflow.yaml
@@ -12,15 +12,10 @@ name: Trigger Go Version Workflow
 on:
   # Can be manually triggered
   workflow_dispatch:
-    inputs:
-      internal-repositories:
-        description: 'Internal repositories to trigger workflow against. Matrix example: "org/repo1, org/repo2"'
-        required: false
 
 # environment variables
 env:
   WF_ORG: dell
-  INTERNAL_REPOS: ${{ github.event.inputs.internal-repositories }}
 
 jobs:
   trigger:
@@ -44,6 +39,7 @@ jobs:
             "$WF_ORG/csm",
             "$WF_ORG/csm-authorization",
             "$WF_ORG/csm-docs",
+            "$WF_ORG/csm-logcollector",
             "$WF_ORG/csm-metrics-powermax",
             "$WF_ORG/csm-metrics-powerscale",
             "$WF_ORG/csm-metrics-powerstore",
@@ -65,7 +61,7 @@ jobs:
             "$WF_ORG/gounity",
             "$WF_ORG/karavi-metrics-powerflex",
             "$WF_ORG/karavi-resiliency",
-            "$INTERNAL_REPOS",
+            "$WF_ORG/karavi-topology"
           ]
 
     steps:
