Add entry point.

--- a/go-code-tester/action.yml
+++ b/go-code-tester/action.yml
@@ -37,6 +37,7 @@ runs:
     - ${{ inputs.skip-list }}
     - ${{ inputs.race-detector }}
     - ${{ inputs.skip-test }}
+    - ${{ inputs.run-test }}
 branding:
   icon: 'shield'
   color: 'blue'
