--- a/.github/workflows/trigger-go-workflow.yaml
+++ b/.github/workflows/trigger-go-workflow.yaml
@@ -10,6 +10,9 @@
 name: Trigger Go Version Workflow
 
 on:
+  schedule:
+    # Runs on the 12th hour on the first day of every month.
+    - cron: '0 12 1 * *'
   # Can be manually triggered
   workflow_dispatch:
 
