updated release action to include release notes

--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -26,19 +26,19 @@ jobs:
     steps:
       - name: Checkout the code
         uses: actions/checkout@v4
-      # - name: Set up Go
-      #   uses: actions/setup-go@v5
-      #   with:
-      #     go-version: "1.23"
-      # - name: Install dependencies
-      #   run: go mod tidy
-      # - name: Build
-      #   run: go build -v ./...
-      # - name: Run malware scan
-      #   uses: dell/common-github-actions/malware-scanner@main
-      #   with:
-      #     directories: .
-      #     options: -ri
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23"
+      - name: Install dependencies
+        run: go mod tidy
+      - name: Build
+        run: go build -v ./...
+      - name: Run malware scan
+        uses: dell/common-github-actions/malware-scanner@main
+        with:
+          directories: .
+          options: -ri
 
       - name: Create new tag
         run: |
