--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -26,8 +26,8 @@ jobs:
     steps:
       - name: Validate version input
         run: |
-          if [[ "${{ github.event.inputs.version }}" != "major" && "${{ github.event.inputs.version }}" != "minor" && "${{ github.event.inputs.version }}" != "patch" ]]; then
-            echo "Invalid version specified: ${{ github.event.inputs.version }}. Must be one of 'major', 'minor', or 'patch'."
+          if [[ "${{ github.event.inputs.version }}" == "none" ]]; then
+            echo "Invalid version specified: ${{ github.event.inputs.version }} Must be x.x.x"
             exit 1
           fi      
       - name: Checkout the code
