--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -6,8 +6,8 @@
 #
 #  http://www.apache.org/licenses/LICENSE-2.0
 
-# This workflow is used to release libraries like gobrick, gofsutil etc.
-name: Release Go Client Libraries
+# This workflow is used to release CSI Drivers and modules.
+name: Release CSI Drivers and Modules
 
 # Invocable as a reusable workflow
 on:
