--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -71,11 +71,11 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v2
 
-      - name: Log in to Quay
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}
+      #- name: Log in to Quay
+      #  uses: docker/login-action@v2
+      #  with:
+      #    username: ${{ secrets.QUAY_USERNAME }}
+      #    password: ${{ secrets.QUAY_PASSWORD }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -83,14 +83,14 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Pull nightly image from Quay.io
-        run: docker pull quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly
+      #- name: Pull nightly image from Quay.io
+       # run: docker pull quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly
 
-      - name: Retag image for Quay.io
-        run: |
-          docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:v${{ github.event.inputs.version }}
+      #- name: Retag image for Quay.io
+      #  run: |
+      #    docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:v${{ github.event.inputs.version }}
 
-          docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:latest
+       #   docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:latest
 
       - name: Retag image for Docker Hub
         run: |
