--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -6,8 +6,8 @@
 #
 #  http://www.apache.org/licenses/LICENSE-2.0
 
-# Reusable workflow to run unit tests on Golang based projects
-name: Unit Test Checker
+# Reusable workflow to run unit tests and gosec on Golang based projects
+name: Common Workflows
 
 on:
   workflow_call:
@@ -16,7 +16,7 @@ env:
   CODE_COVERAGE_TARGET: ${{ vars.CODE_COVERAGE_TARGET || 90 }}
 
 jobs:
-  test:
+  gocoverage:
     name: Run Go unit tests and check package coverage
     runs-on: ubuntu-latest
     steps:
@@ -28,3 +28,13 @@ jobs:
         with:
           threshold: ${{ env.CODE_COVERAGE_TARGET }}
           test-folder: ${{ vars.CODE_COVERAGE_DIR }}
+
+  security:
+    name: Run GoSec
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run gosec
+        uses: dell/common-github-actions/gosec-runner@main
