--- a/go-code-formatter-vetter/action.yml
+++ b/go-code-formatter-vetter/action.yml
@@ -5,8 +5,8 @@
 # You may obtain a copy of the License at
 #
 #  http://www.apache.org/licenses/LICENSE-2.0
-name: 'Check Formatting, Linting, Vetting'
-description: 'Runs gofmt, golint, and go vet'
+name: 'Check Formatting, Vetting'
+description: 'Runs gofmt and go vet'
 
 inputs:
   directories:
