--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -6,7 +6,7 @@
 #
 #  http://www.apache.org/licenses/LICENSE-2.0
 
-# Reusable workflow to run unit tests and gosec on Golang based projects
+# Reusable workflow to run multiple workflow checks on Golang based projects
 name: Common Workflows
 
 on:
