--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -16,6 +16,7 @@ on:
 env:
   # unit test action
   CODE_COVERAGE_TARGET: ${{ vars.CODE_COVERAGE_TARGET || 90 }}
+  CODE_COVERAGE_DIR: ${{ vars.CODE_COVERAGE_DIR || '.' }}
   SKIP_LIST: ${{ vars.PACKAGE_SKIP_LIST || '' }}
   RACE_DETECTOR: ${{ vars.RACE_DETECTOR || true }}
   SKIP_TEST: ${{ vars.SKIP_TEST || '' }}
@@ -38,7 +39,7 @@ jobs:
         uses: dell/common-github-actions/go-code-tester@main
         with:
           threshold: ${{ env.CODE_COVERAGE_TARGET }}
-          test-folder: ${{ vars.CODE_COVERAGE_DIR }}
+          test-folder: ${{ env.CODE_COVERAGE_DIR }}
           skip-list: ${{ env.SKIP_LIST }}
           race-detector: ${{ env.RACE_DETECTOR }}
           skip-test: ${{ env.SKIP_TEST }}
