--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -12,10 +12,22 @@ name: Common Workflows
 on:
   workflow_call:
 
+# Set defaults
 env:
+  # unit test action
   CODE_COVERAGE_TARGET: ${{ vars.CODE_COVERAGE_TARGET || 90 }}
+  CODE_COVERAGE_DIR: ${{ vars.CODE_COVERAGE_DIR || '.' }}
+  SKIP_LIST: ${{ vars.PACKAGE_SKIP_LIST || '' }}
+  RACE_DETECTOR: ${{ vars.RACE_DETECTOR || true }}
+  SKIP_TEST: ${{ vars.SKIP_TEST || '' }}
+  RUN_TEST: ${{ vars.RUN_TEST || '' }}
+
+  # gosec action
+  GOSEC_EXCLUDES: ${{ vars.GOSEC_EXCLUDES || '' }}
+  GOSEC_EXCLUDE_DIR: ${{ vars.GOSEC_EXCLUDE_DIR || '' }}
 
 jobs:
+  # Run unit tests
   gocoverage:
     name: Unit tests and package coverage
     runs-on: ubuntu-latest
@@ -27,8 +39,13 @@ jobs:
         uses: dell/common-github-actions/go-code-tester@main
         with:
           threshold: ${{ env.CODE_COVERAGE_TARGET }}
-          test-folder: ${{ vars.CODE_COVERAGE_DIR }}
+          test-folder: ${{ env.CODE_COVERAGE_DIR }}
+          skip-list: ${{ env.SKIP_LIST }}
+          race-detector: ${{ env.RACE_DETECTOR }}
+          skip-test: ${{ env.SKIP_TEST }}
+          run-test: ${{ env.RUN_TEST }}
 
+  # Check sources for security vulnerabilities
   security:
     name: GoSec
     runs-on: ubuntu-latest
@@ -38,7 +55,11 @@ jobs:
 
       - name: gosec
         uses: dell/common-github-actions/gosec-runner@main
+        with:
+          excludes: ${{ env.GOSEC_EXCLUDES }}
+          exclude-dir: ${{ env.GOSEC_EXCLUDE_DIR }}
 
+  # Check sources for formatting and vetting
   formatter_vetter:
     name: Go Formatter and Vetter
     runs-on: ubuntu-latest
@@ -48,3 +69,16 @@ jobs:
 
       - name: gofmt and go vet
         uses: dell/common-github-actions/go-code-formatter-vetter@main
+
+  # Check sources files for malware
+  malware_security_scan:
+    name: Malware Scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v4
+      - name: Run malware scan
+        uses: dell/common-github-actions/malware-scanner@main
+        with:
+          directories: .
+          options: -ri
