--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -21,6 +21,7 @@ env:
   RACE_DETECTOR: ${{ vars.RACE_DETECTOR || true }}
   SKIP_TEST: ${{ vars.SKIP_TEST || '' }}
   RUN_TEST: ${{ vars.RUN_TEST || '' }}
+  EXCLUDE_DIRECTORIES: ${{ vars.EXCLUDE_DIRECTORIES || '' }}
 
   # gosec action
   GOSEC_EXCLUDES: ${{ vars.GOSEC_EXCLUDES || '' }}
@@ -44,6 +45,7 @@ jobs:
           race-detector: ${{ env.RACE_DETECTOR }}
           skip-test: ${{ env.SKIP_TEST }}
           run-test: ${{ env.RUN_TEST }}
+          exclude-directory: ${{ env.EXCLUDE_DIRECTORIES }}
 
   # Check sources for security vulnerabilities
   security:
