--- a/.github/workflows/check-license-header.yaml
+++ b/.github/workflows/check-license-header.yaml
@@ -15,19 +15,19 @@ jobs:
         config: ../configs/.licenserc.yaml
         mode: check
 
-  fix-license-headers:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Fix License Header
-      uses: apache/skywalking-eyes/header@main
-      with:
-        config: ../configs/.licenserc.yaml
-        mode: fix
-    - name: Commit changes
-      uses: EndBug/add-and-commit@v4
-      with:
-        author_name: License Bot
-        author_email: license_bot@github.com
-        message: 'Automatic application of license header'
+  # fix-license-headers:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Checkout repository
+  #     uses: actions/checkout@v2
+  #   - name: Fix License Header
+  #     uses: apache/skywalking-eyes/header@main
+  #     with:
+  #       config: ../configs/.licenserc.yaml
+  #       mode: fix
+  #   - name: Commit changes
+  #     uses: EndBug/add-and-commit@v4
+  #     with:
+  #       author_name: License Bot
+  #       author_email: license_bot@github.com
+  #       message: 'Automatic application of license header'
