ignore file fix

--- a/.github/configs/.licenserc.yaml
+++ b/.github/configs/.licenserc.yaml
@@ -10,5 +10,5 @@ header:
     - '**/*.md'
     - 'LICENSE'
     - 'NOTICE'
-    - '.github/CODEOWNERS'
+    - '../CODEOWNERS'
   comment: on-failure
