Github workflow for trigerring the csm release
Signed-off-by: meghana_gm <meghana.gm@dell.com>

--- a/.github/workflows/auto-release-csm-driver-module.yaml
+++ b/.github/workflows/auto-release-csm-driver-module.yaml
@@ -7,7 +7,7 @@
 #  http://www.apache.org/licenses/LICENSE-2.0
 
 # This workflow is used to release CSI Drivers and modules.
-name: Release CSM Drivers and Modules
+name: Auto Release CSM Drivers and Modules
 
 on:
   workflow_call:
